# Bosch-GLM

./: .gitignore  LICENSE  README.md  export.py  main.py  notes.py  pyproject.toml  requirements.txt  settings.py  setup.py  station.py  tui.py
art/: panelized_roof_stackup_artwork v2.monojson  panelized_roof_stackup_artwork v2.txt  panelized_roof_stackup_artwork.monojson
docs/: CROSS_PLATFORM_PLAN.md
esp32/: platformio.ini
esp32/lib/glm/: glm.cpp  glm.h
esp32/lib/glm50c/: glm50c.cpp  glm50c.h
esp32/lib/prefs/: prefs.cpp  prefs.h
esp32/lib/shutdown_timer/: shutdown_timer.h
esp32/lib/utils/: utils.cpp  utils.h
esp32/src/: main.cpp
glm/: __init__.py  ble.py  cli.py  export.py  feedback.py  format.py  gestures.py  location.py  notes.py  prefs.py  setup.py  sites.py  station.py  store.py
glm/protocol/: constants.py  crc.py  frame.py  messages.py
glm/tui/: app.py  screens.py
tests/: test_catchup.py  test_crc.py  test_export.py  test_export_autocad.py  test_format.py  test_frame.py  test_gestures.py  test_messages.py  test_notes.py  test_prefs.py  test_setup.py  test_sites.py  test_soft_delete.py  test_station.py  test_store.py
