[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bosch-glm"
version = "0.1.10"
description = "Stream measurements from a Bosch GLM laser rangefinder over BLE."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22",
    "platformdirs>=4",
    "textual>=0.85",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-CoreLocation>=10"]

[tool.setuptools.packages.find]
include = ["glm*"]
